--- a/QuakeReport/app/src/main/res/layout/list_item.xml
+++ b/QuakeReport/app/src/main/res/layout/list_item.xml
@@ -1,41 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="70dp"
+    android:orientation="horizontal"
+    android:padding="16dp"
     android:id="@+id/list_item">
 
     <TextView
         android:id="@+id/magnitude_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:textAppearance="?textAppearanceListItem"
+        android:layout_weight="1"
         tools:text="4.0" />
 
     <TextView
-        android:id="@+id/location_text_view"
-        android:layout_width="wrap_content"
+        android:id="@+id/location_offset_text_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textAppearance="?textAppearanceListItem"
-        tools:text="Location"
-        android:layout_centerInParent="true"
-        android:layout_alignBaseline="@id/magnitude_text_view"
-        android:layout_marginLeft="16dp"/>
-
+        tools:text="74km NW of"
+        android:layout_weight="1"/>
 
     <TextView
-        android:id="@+id/date_text_view"
-        android:layout_width="wrap_content"
+        android:id="@+id/primary_location_text_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="16dp"
-        android:layout_alignBaseline="@id/location_text_view"
-        android:textAppearance="?textAppearanceListItem"
-        tools:text="Date" />
+        tools:text="San Francisco, CA"
+        android:layout_weight="1"/>
 
-</RelativeLayout>
+    <TextView
+    android:id="@+id/date_text_view"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    tools:text="Mar 6, 2010" />
+
+    <TextView
+        android:id="@+id/time_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="3:00 PM" />
+
+</LinearLayout>
